--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
 _site
 .sass-cache/
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+ 
+# OS or Editor folders
+.DS_Store
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+ 
+# Folders to ignore
+.hg
+.svn
+.CVS
+intermediate
+publish
+.idea
+ 
+# build script local files
+build/buildinfo.properties
+build/config/buildinfo.properties
