--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ pygments: true
 permalink: /blog/:year/:month/:day/:title
 # paginate: 5
 # paginate_path: "blog/page:num"
-exclude: ['node_modules']
+exclude: ['node_modules', 'gulpfile.js']
 
 # markdown: maruku
 markdown: redcarpet
