--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Sam Selikoff
-pygments: true
+# pygments: true
 highlighter: pygments
 permalink: /blog/:year/:month/:day/:title
 # paginate: 5
