--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,17 @@ exclude: ['node_modules', 'gulpfile.js']
 
 # markdown: maruku
 markdown: redcarpet
+
+gems:
+  - 'pry'
+  - 'pry-debugger'
+  - 'jekyll-compass'
+
 # redcarpet:
 #     extensions: [with_toc_data]
 
 sass:
+    sass_dir: _sass
     style:  expanded  # nested|expanded|compact|compressed
     deploy_style: compressed  # nested|expanded|compact|compressed
     # "deploy_style:" is used only for building the site
