--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,5 @@
-- datetime: 2014-08-12 15:00:00
+- date: 2014-09-11 00:00:00
   type: 'talk'
   title: 'Intro to Ember'
-  location: 'Boston, MA'
+  subtitle: 'Boston, MA'
   link: ''
-
