--- a/_config.yml
+++ b/_config.yml
@@ -14,16 +14,20 @@ gems:
   - 'pry-debugger'
   - 'jekyll-compass'
 
+collections:
+  talks:
+    output: true
+
 # redcarpet:
 #     extensions: [with_toc_data]
 
 sass:
-    sass_dir: _sass
-    style:  expanded  # nested|expanded|compact|compressed
-    deploy_style: compressed  # nested|expanded|compact|compressed
-    # "deploy_style:" is used only for building the site
-    # (ie: not using the --watch flag)
+  sass_dir: _sass
+  style:  expanded  # nested|expanded|compact|compressed
+  deploy_style: compressed  # nested|expanded|compact|compressed
+  # "deploy_style:" is used only for building the site
+  # (ie: not using the --watch flag)
 
-    compile_in_place: false   # true|false
-    # If true, compiles sass directly into your jekyll source directory
-    # As well as your destination directory
+  compile_in_place: false   # true|false
+  # If true, compiles sass directly into your jekyll source directory
+  # As well as your destination directory
