--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ markdown: redcarpet
 excerpt_separator: "<!-- more -->"
 
 gems:
-  - 'pry'
-  - 'pry-debugger'
-  - 'jekyll-compass'
-  - 'jekyll-redirect-from'
-  - 'active_support'
+  - pry
+  - pry-debugger
+  - jekyll-compass
+  - jekyll-redirect-from
+  - active_support
 
 collections:
   talks:
