Update work page, index on home

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ collections:
   talks:
     output: true
     permalink: /speaking/:path/
+  projects:
+    permalink: /work/:path/
 
 defaults:
   -
