Add dates to talk files

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ collections:
     permalink: /:collection/:path/
   talks:
     output: true
-    permalink: /talks/:path/
+    permalink: /talks/:title/
   projects:
     permalink: /work/:path/
 
