--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ collections:
     output: true
     permalink: /talks/:title/
   projects:
-    permalink: /work/:path/
+    permalink: /projects/:path/
 
 defaults:
   -
