Working on css dev conf notes

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ collections:
 defaults:
   -
     scope:
-      path: 'posts' # an empty string here means all files in the project
+      path: ''
       type: 'posts'
     values:
       layout: 'post'
