--- a/_quotes/product.yml
+++ b/_quotes/product.yml
@@ -3,4 +3,6 @@
 
 - quote: Focus is saying no to 1,000 good ideas.
   author: Steve Jobs
-  source:
+
+- quote: The details are not the details. They make the design.
+  author: Charles Eames
