--- a/_quotes/general.yml
+++ b/_quotes/general.yml
@@ -3,3 +3,6 @@
 
 - quote: When one teaches, two learn
   author: Robert Heinlein
+
+- quote: : One who makes no mistakes makes nothing
+  author: Giacomo Casanova
