--- a/_quotes/general.yml
+++ b/_quotes/general.yml
@@ -4,5 +4,8 @@
 - quote: When one teaches, two learn
   author: Robert Heinlein
 
-- quote: : One who makes no mistakes makes nothing
+- quote: One who makes no mistakes makes nothing
   author: Giacomo Casanova
+
+- quote: When everybody thinks alike, nobody thinks
+  author: Bill Walton
