--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-spring": "^9.0.0-beta.34",
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
