workin on talks

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "clean": "gatsby clean",
+    "develop": "npm run clean && gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
