--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.6.1",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -22,6 +23,7 @@
     "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
+    "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.18.2"
   },
   "keywords": [
