--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reach/dialog": "^0.6.1",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-layout": "^1.1.15",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-postcss": "^2.1.13",
