--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^5.2.1",
     "react-spring": "^9.0.0-beta.34",
     "react-syntax-highlighter": "^11.0.2",
+    "remark-slug": "^5.1.2",
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
