--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-spring": "^9.0.0-beta.34",
     "react-syntax-highlighter": "^11.0.2",
     "remark-slug": "^5.1.2",
-    "tailwindcss": "^1.1.4"
+    "tailwindcss": "^1.1.4",
+    "typeface-inter": "^3.10.0"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.0.2",
