--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-spring": "^9.0.0-beta.34",
+    "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^11.0.2",
     "remark-slug": "^5.1.2",
     "tailwindcss": "^1.1.4",
