--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^11.0.2",
     "remark-slug": "^5.1.2",
-    "tailwindcss": "^1.1.4",
-    "typeface-inter": "^3.10.0"
+    "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.0.2",
