--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-layout": "^1.1.18",
     "gatsby-plugin-manifest": "^2.2.33",
     "gatsby-plugin-mdx": "^1.0.62",
+    "gatsby-plugin-netlify": "^2.1.31",
     "gatsby-plugin-offline": "^3.0.29",
     "gatsby-plugin-postcss": "^2.1.18",
     "gatsby-plugin-react-helmet": "^3.1.18",
