--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "@reach/dialog": "^0.6.2",
+    "date-fns": "^2.14.0",
     "gatsby": "^2.18.11",
     "gatsby-image": "^2.2.36",
     "gatsby-plugin-layout": "^1.1.18",
