bout to move some s

--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.16",
+    "@next/mdx": "^9.5.2",
     "@reach/dialog": "^0.10.5",
-    "next": "9.5.2",
+    "gray-matter": "^4.0.2",
+    "next": "9.5.1",
+    "next-mdx-enhanced": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
+    "remark": "^12.0.1",
+    "remark-html": "^12.0.0",
     "tailwindcss": "^1.7.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.0.0"
   }
 }
