--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^9.5.2",
     "@reach/dialog": "^0.10.5",
+    "date-fns": "^2.15.0",
     "gray-matter": "^4.0.2",
     "next": "9.5.1",
     "next-mdx-enhanced": "^3.1.0",
