--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "9.5.1",
     "next-mdx-enhanced": "^3.1.0",
     "parse-numeric-range": "^1.2.0",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
