--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "date-fns": "^2.15.0",
     "firebase": "^7.19.0",
     "gray-matter": "^4.0.2",
-    "next": "9.5.1",
-    "next-mdx-enhanced": "^3.1.0",
+    "next": "^9.5.3-canary.25",
+    "next-mdx-enhanced": "^4.0.0",
     "parse-numeric-range": "^1.2.0",
     "postcss-import": "^12.0.1",
     "react": "16.13.1",
