--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/ui": "^0.5.0",
     "date-fns": "^2.15.0",
     "firebase": "^7.19.0",
+    "formik": "^2.1.5",
     "gray-matter": "^4.0.2",
     "next": "^9.5.3-canary.25",
     "next-mdx-enhanced": "^4.0.0",
