--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "next-mdx-enhanced": "^4.0.0",
     "parse-numeric-range": "^1.2.0",
     "postcss-import": "^12.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^13.5.1",
     "remark": "^12.0.1",
@@ -31,5 +31,8 @@
   },
   "devDependencies": {
     "file-loader": "^6.2.0"
+  },
+  "engines": {
+    "node": ">=12.16.0"
   }
 }
