--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "@loadable/component": "^5.14.1",
     "@mdx-js/loader": "^1.6.19",
-    "@next/mdx": "^9.5.2",
+    "@next/mdx": "^10.0.0",
     "@reach/dialog": "^0.11.2",
     "@tailwindcss/ui": "^0.6.2",
     "date-fns": "^2.16.1",
     "firebase": "^8.0.0",
     "formik": "^2.2.1",
     "gray-matter": "^4.0.2",
-    "next": "^9.5.3-canary.25",
+    "next": "^10.0.0",
     "next-mdx-enhanced": "^4.0.0",
     "parse-numeric-range": "^1.2.0",
     "postcss-import": "^12.0.1",
