--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react-dom": "17.0.1",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^13.5.1",
+    "slugify": "^1.4.6",
     "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.2.0"
   },
   "engines": {
